Update 2 vias. Update settings.json.

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -19,6 +19,10 @@
         "xlocale": "c",
         "chrono": "c",
         "gpio_task.h": "c",
-        "xiosbase": "c"
+        "xiosbase": "c",
+        "random": "c",
+        "hv5622.h": "c",
+        "unity.h": "c",
+        "display.h": "c"
     }
 }
