Add mock for hv5622.

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -23,6 +23,8 @@
         "random": "c",
         "hv5622.h": "c",
         "unity.h": "c",
-        "display.h": "c"
+        "display.h": "c",
+        "hv5622_mock.h": "c",
+        "functional": "c"
     }
 }
