--- a/software/nixie_clock_esp32_project/test/CMakeLists.txt
+++ b/software/nixie_clock_esp32_project/test/CMakeLists.txt
@@ -2,11 +2,13 @@ add_executable(native_tests
     test_display.c
     test_clock.c
     test_main.c
-    ../components/display/display.c   # pour inclure shift_compute
-    ../components/clock/clock.c   # pour inclure shift_compute
+    ../components/hv5622/hv5622_mock.c
+    ../components/display/display.c
+    ../components/clock/clock.c
 )
 
 include_directories(
+    ../components/hv5622
     ../components/display
     ../components/clock
     C:/Espressif/frameworks/esp-idf-v5.5/components/unity/include
