Add rotary encoder.

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -25,6 +25,7 @@
         "unity.h": "c",
         "display.h": "c",
         "hv5622_mock.h": "c",
-        "functional": "c"
+        "functional": "c",
+        "charconv": "c"
     }
 }
