--- a/.github/workflows/misra_check.yml
+++ b/.github/workflows/misra_check.yml
@@ -27,6 +27,7 @@ jobs:
             --suppress=missingInclude:*esp_* \
             --suppress=missingInclude:*freertos/* \
             --suppress=missingInclude:*driver/* \
+            --suppress=missingIncludeSystem software/nixie_clock_esp32_project
             -Isoftware/nixie_clock_esp32_project/components \
             -Isoftware/nixie_clock_esp32_project/components/uart \
             -Isoftware/nixie_clock_esp32_project/components/gpio_driver \
