--- a/.github/workflows/misra_check.yml
+++ b/.github/workflows/misra_check.yml
@@ -27,7 +27,7 @@ jobs:
             --suppress=missingInclude:*esp_* \
             --suppress=missingInclude:*freertos/* \
             --suppress=missingInclude:*driver/* \
-            --suppress=missingIncludeSystem software/nixie_clock_esp32_project
+            --suppress=missingIncludeSystem software/nixie_clock_esp32_project \
             --exclude=software/nixie_clock_esp32_project/test/ \
             -Isoftware/nixie_clock_esp32_project/components \
             -Isoftware/nixie_clock_esp32_project/components/uart \
