--- a/.github/workflows/misra_check.yml
+++ b/.github/workflows/misra_check.yml
@@ -11,8 +11,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install cppcheck
-        run: sudo apt-get install -y cppcheck
+      - name: Install cppcheck >= 2.8
+        run: |
+          sudo add-apt-repository -y ppa:damien-moore/cppcheck
+          sudo apt-get update
+          sudo apt-get install -y cppcheck
 
       - name: Run MISRA C analysis
         run: |
@@ -34,4 +37,5 @@ jobs:
             -Isoftware/nixie_clock_esp32_project/components/display \
             -Isoftware/nixie_clock_esp32_project/components/clock \
             -Isoftware/nixie_clock_esp32_project/components/hv5622 \
-            -Isoftware/nixie_clock_esp32
+            -Isoftware/nixie_clock_esp32_project/main \
+            software/nixie_clock_esp32_project
