--- a/software/nixie_clock_esp32_project/main/CMakeLists.txt
+++ b/software/nixie_clock_esp32_project/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "gpio_task.c" "main.c" "clock_task.c"
                        INCLUDE_DIRS "."
-                       REQUIRES uart hv5622 display clock gpio_driver)
+                       REQUIRES uart hv5622 display clock gpio_driver rotary_encoder)
