--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -45,7 +45,10 @@
         "nvs_flash.h": "c",
         "nvs.h": "c",
         "config.h": "c",
-        "esp_err.h": "c"
+        "esp_err.h": "c",
+        "esp_compiler.h": "c",
+        "html_page.h": "c",
+        "esp_event.h": "c"
     },
     "idf.flashType": "UART"
 }
