--- a/software/nixie_clock_esp32_project/components/webserver/CMakeLists.txt
+++ b/software/nixie_clock_esp32_project/components/webserver/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "webserver.c"
+idf_component_register(SRCS "html_page.c" "webserver.c"
                     INCLUDE_DIRS "."
                     REQUIRES esp_wifi esp_event esp_netif esp_http_server driver config)
