--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -57,7 +57,8 @@
         "type_traits": "c",
         "xlocmon": "c",
         "xtr1common": "c",
-        "xutility": "c"
+        "xutility": "c",
+        "xstring": "c"
     },
     "idf.flashType": "UART"
 }
