Make uart_write thread safe.

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -58,7 +58,9 @@
         "xlocmon": "c",
         "xtr1common": "c",
         "xutility": "c",
-        "xstring": "c"
+        "xstring": "c",
+        "array": "c",
+        "vector": "c"
     },
     "idf.flashType": "UART"
 }
