--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -60,7 +60,8 @@
         "xutility": "c",
         "xstring": "c",
         "array": "c",
-        "vector": "c"
+        "vector": "c",
+        "semphr.h": "c"
     },
     "idf.flashType": "UART"
 }
