--- a/software/nixie_clock_esp32_project/components/config/CMakeLists.txt
+++ b/software/nixie_clock_esp32_project/components/config/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
-    SRCS "config.c"
+    SRCS "config.c" "../../main/ntp_sync_task.c"
     INCLUDE_DIRS "."
-    REQUIRES nvs
+    REQUIRES nvs wifi 
 )
