Move ntp_sync_task to ntp component.

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -63,7 +63,8 @@
         "vector": "c",
         "semphr.h": "c",
         "nvs_mock.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "ntp.h": "c"
     },
     "idf.flashType": "UART"
 }
