--- a/.github/workflows/misra_check.yml
+++ b/.github/workflows/misra_check.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 jobs:
-  misra:
+  Misra:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
         working-directory: software/nixie_clock_esp32_project
         run: |
           cppcheck \
-            --enable=all \
+            --enable=all,style \
             --std=c99 \
             --language=c \
             --addon=misra \
