Add PWM control (Brightness control).

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -65,7 +65,8 @@
         "nvs_mock.h": "c",
         "string.h": "c",
         "ntp.h": "c",
-        "format": "c"
+        "format": "c",
+        "pwm.h": "c"
     },
     "idf.flashType": "UART"
 }
