--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -66,7 +66,8 @@
         "string.h": "c",
         "ntp.h": "c",
         "format": "c",
-        "pwm.h": "c"
+        "pwm.h": "c",
+        "service_manager.h": "c"
     },
     "idf.flashType": "UART"
 }
