--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -27,4 +27,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: software/nixie_clock_esp32_project/docs/html
+          publish_dir: docs/html
