Add a payload in the evt_bus module (to remove clockUpdateQueue).

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -69,7 +69,21 @@
         "pwm.h": "c",
         "service_manager.h": "c",
         "dispatcher.h": "c",
-        "event_bus.h": "c"
+        "event_bus.h": "c",
+        "atomic": "c",
+        "bit": "c",
+        "compare": "c",
+        "cstddef": "c",
+        "future": "c",
+        "iterator": "c",
+        "limits": "c",
+        "memory": "c",
+        "mutex": "c",
+        "sstream": "c",
+        "xhash": "c",
+        "xloctime": "c",
+        "xmemory": "c",
+        "xtree": "c"
     },
     "idf.flashType": "UART"
 }
