--- a/software/nixie_clock_esp32_project/components/dispatcher_task/CMakeLists.txt
+++ b/software/nixie_clock_esp32_project/components/dispatcher_task/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "dispatcher.c"
+idf_component_register(SRCS "dispatcher_task.c"
                     INCLUDE_DIRS "."
                     REQUIRES freertos event_bus
 )
