First start on real ESP-32 C3 hardware.

--- a/software/nixie_clock_esp32_project/.vscode/settings.json
+++ b/software/nixie_clock_esp32_project/.vscode/settings.json
@@ -88,5 +88,6 @@
         "esp_int_wdt.h": "c",
         "dispatcher_task.h": "c"
     },
-    "idf.flashType": "UART"
+    "idf.flashType": "UART",
+    "idf.portWin": "COM19"
 }
