--- a/software/nixie_clock_esp32_project/components/uart/CMakeLists.txt
+++ b/software/nixie_clock_esp32_project/components/uart/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "uart.c"
-                    INCLUDE_DIRS "."
-                    REQUIRES driver  # <-- use uart driver from esp-idf
-)
+#idf_component_register(SRCS "uart.c"
+#                    INCLUDE_DIRS "."
+#                    REQUIRES driver  # <-- use uart driver from esp-idf
+#)
